--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,10 @@ path = "src/bin/advent2020_day02.rs"
 name = "day03"
 path = "src/bin/advent2020_day03.rs"
 
+[[bin]]
+name = "day04"
+path = "src/bin/advent2020_day04.rs"
+
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -24,3 +28,4 @@ itertools = "0.10.1"
 num-cmp = "0.1.0"
 parse-display = "0.5.0"
 scan_fmt = "0.2.6"
+hex = "0.4"
