Move to using the aoc-main crate for organization

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,35 +4,6 @@ version = "0.1.0"
 authors = ["Clint Olson <coandco@gmail.com>"]
 edition = "2018"
 
-[[bin]]
-name = "day01"
-path = "src/bin/advent2020_day01.rs"
-
-[[bin]]
-name = "day02"
-path = "src/bin/advent2020_day02.rs"
-
-[[bin]]
-name = "day03"
-path = "src/bin/advent2020_day03.rs"
-
-[[bin]]
-name = "day04"
-path = "src/bin/advent2020_day04.rs"
-
-[[bin]]
-name = "day05"
-path = "src/bin/advent2020_day05.rs"
-
-[[bin]]
-name = "day06"
-path = "src/bin/advent2020_day06.rs"
-
-[[bin]]
-name = "day07"
-path = "src/bin/advent2020_day07.rs"
-
-
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
@@ -44,3 +15,4 @@ hex = "0.4"
 phf = { version = "0.9", features = ["macros"] }
 lazy_static = "1.4.0"
 regex = "1.5.4"
+aoc-main = { version = "0.3.0", features = ["bench"] }
