--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,4 +18,6 @@ aoc-main = { version = "0.3.0", features = ["bench"] }
 bit_field = "0.10.1"
 im = "15.0.0"
 derive_more = "0.99.16"
+genawaiter = "0.99.1"
+peg = "0.7.0"
 
